test/tests/stages/18_structures/valid/extra_credit/member_access/union_init_and_member_access.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: u
        Bool: 1
        List[4]: 
          CMemberDeclaration: 
            TIdentifier: d
            Double: 
          CMemberDeclaration: 
            TIdentifier: l
            Long: 
          CMemberDeclaration: 
            TIdentifier: ul
            ULong: 
          CMemberDeclaration: 
            TIdentifier: c
            Char: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[8]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: x
                  CCompoundInit: 
                    List[1]: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 20
                          None: 
                        None: 
                    None: 
                  Structure: 
                    TIdentifier: u
                    Bool: 1
                  None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CDot: 
                    TIdentifier: d
                    CVar: 
                      TIdentifier: x
                      None: 
                    None: 
                  CConstant: 
                    CConstDouble: 
                      TDouble: 20.000000
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 1
                            None: 
                None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: ptr
                  CSingleInit: 
                    CAddrOf: 
                      CVar: 
                        TIdentifier: x
                        None: 
                      None: 
                    None: 
                  Pointer: 
                    Structure: 
                      TIdentifier: u
                      Bool: 1
                  None: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CArrow: 
                    TIdentifier: l
                    CVar: 
                      TIdentifier: ptr
                      None: 
                    None: 
                  CUnary: 
                    CNegate: 
                    CConstant: 
                      CConstLong: 
                        TLong: 1
                      None: 
                    None: 
                  None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CArrow: 
                    TIdentifier: l
                    CVar: 
                      TIdentifier: ptr
                      None: 
                    None: 
                  CUnary: 
                    CNegate: 
                    CConstant: 
                      CConstLong: 
                        TLong: 1
                      None: 
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 2
                            None: 
                None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CArrow: 
                    TIdentifier: ul
                    CVar: 
                      TIdentifier: ptr
                      None: 
                    None: 
                  CConstant: 
                    CConstULong: 
                      TULong: 18446744073709551615
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 3
                            None: 
                None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CDot: 
                    TIdentifier: c
                    CVar: 
                      TIdentifier: x
                      None: 
                    None: 
                  CUnary: 
                    CNegate: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 4
                            None: 
                None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
