test/tests/stages/18_structures/invalid_types/extra_credit/invalid_union_lvalues/address_of_non_lvalue_union_member.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[3]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: u
        Bool: 1
        List[2]: 
          CMemberDeclaration: 
            TIdentifier: arr
            Array: 
              TLong: 3
              Int: 
          CMemberDeclaration: 
            TIdentifier: d
            Double: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: get_union
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: result
                  CCompoundInit: 
                    List[2]: 
                      CCompoundInit: 
                        List[3]: 
                          CSingleInit: 
                            CConstant: 
                              CConstInt: 
                                TInt: 1
                              None: 
                            None: 
                          CSingleInit: 
                            CConstant: 
                              CConstInt: 
                                TInt: 2
                              None: 
                            None: 
                          CSingleInit: 
                            CConstant: 
                              CConstInt: 
                                TInt: 3
                              None: 
                            None: 
                        None: 
                      CSingleInit: 
                        CConstant: 
                          CConstDouble: 
                            TDouble: 4.000000
                          None: 
                        None: 
                    None: 
                  Structure: 
                    TIdentifier: u
                    Bool: 1
                  None: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: result
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Structure: 
            TIdentifier: u
            Bool: 1
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: ptr
                  CSingleInit: 
                    CAddrOf: 
                      CDot: 
                        TIdentifier: arr
                        CFunctionCall: 
                          TIdentifier: get_union
                          List[0]: 
                          None: 
                        None: 
                      None: 
                    None: 
                  Array: 
                    TLong: 3
                    Pointer: 
                      Int: 
                  None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
